Preliminary port to 1.18.2, Fabric & MojMap. Forge counterpart to come later. Certain parts still non-functional but iChunUtil as a mod compiles and runs.